# little-form

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md
.github/workflows/: fmt.yml  publish.yml  tests.yml
little_form/: config.py
little_form/app/: __init__.py  extensions.py  models.py  public_form.py  views.py
little_form/app/templates/: public_form.html
little_form/app/translations/en/LC_MESSAGES/: messages.po
little_form/app/translations/fr/LC_MESSAGES/: messages.po
little_form/migrations/: alembic.ini  env.py
little_form/migrations/versions/: 0000_fab_tables.py  0001_form_config_45c82302f464.py  0002_form_reponse_60190cbc744b.py
little_form/tests/: conftest.py  test_404.py  test_models.py  test_public_form.py
