[project]
name = "little_form"
version = "1.0.0"
authors = [
  { name="Jules LE BRIS", email="jls.lebris@gmail.com" },
]
description = "Because a little app next to your website can be enough to handle form"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "flask-appbuilder>=5.0",
    "python-dotenv>=1.2",
    "Flask-Migrate>=4.1",
]

[project.urls]
Homepage = "https://github.com/ripoul/google-wallet-webhook-auth"
Issues = "https://github.com/ripoul/google-wallet-webhook-auth/issues"


[dependency-groups]
dev = [
    "ty>=0.0.10",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "types-Flask>=1.1",
]
prod = [
    "gunicorn>=23"
]

[tool.ty.src]
exclude = [
    "little_form/tests/**",  # Exclude all test files
    "little_form/migrations/env.py"
]
include = [
    "little_form/",
]